<resources>
    <string name="app_name">proyecto_grupo_3</string>

    <string name="napolitana_btn">Ordenar</string>
    <string name="suprema_btn">Ordenar</string>
    <string name="quesos_btn">Ordenar</string>
    <string name="pepperoni_btn">Ordenar</string>

    <string name="descripcionnapolitana">La Pizza mas clasica en el mundo,de Italia a tu mesa.</string>
    <string name="descripcionpepperoni">Una Pizza estilo Americana, de ingredientes sencillos pero con mucho sabor.</string>
    <string name="descripcionsuprema">Una Pizza de exelente sabor y muy variada en sus ingredientes.</string>
    <string name="descripcionquesos">Esta Especialidad esta diseñada para los verdaderos amantes del queso.</string>

    <string name="estilopizza">Elige el grosor de tu pizza.</string>
    <string name="orillapizza">Elige la orilla de tu pizza.</string>
    <string name="tamanopizza">Elige el tamaño de tu pizza.</string>

    <string name="mesa1">Mesa1</string>
    <string name="mesa2">Mesa2</string>
    <string name="mesa3">Mesa3</string>
    <string name="mesa4">Mesa4</string>
    <string name="mesa5">Mesa5</string>


    <string name="descripcion_mesa1">los ingredientes son</string>

</resources>