<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondomenu1"
    tools:context=".Pantalla_Menu">

    <ImageView
        android:id="@+id/lgpizza"
        android:layout_width="156dp"
        android:layout_height="146dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        app:srcCompat="@mipmap/pizzalogo2" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:clipToPadding="false"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/holo_red_light"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="383dp"
                            android:layout_height="45dp"
                            android:text="@string/descripcionnapolitana"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="172dp"
                                android:layout_height="87dp"
                                app:srcCompat="@mipmap/napolitana" />

                            <Button
                                android:id="@+id/napolitana"
                                android:layout_width="154dp"
                                android:layout_height="74dp"
                                android:backgroundTint="@color/black"
                                android:onClick="napolitana"
                                android:text="@string/napolitana_btn"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#A93226"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="383dp"
                            android:layout_height="50dp"
                            android:text="@string/descripcionpepperoni"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="172dp"
                                android:layout_height="87dp"
                                app:srcCompat="@mipmap/pepperoni" />

                            <Button
                                android:id="@+id/pepperoni"
                                android:layout_width="154dp"
                                android:layout_height="74dp"
                                android:backgroundTint="@color/black"
                                android:onClick="pepperoni"
                                android:text="@string/pepperoni_btn"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/holo_red_light"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="383dp"
                            android:layout_height="50dp"
                            android:text="@string/descripcionsuprema"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="172dp"
                                android:layout_height="87dp"
                                app:srcCompat="@mipmap/suprema" />

                            <Button
                                android:id="@+id/suprema"
                                android:layout_width="154dp"
                                android:layout_height="74dp"
                                android:backgroundTint="@color/black"
                                android:onClick="suprema"
                                android:text="@string/suprema_btn"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#A93226"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="383dp"
                            android:layout_height="50dp"
                            android:text="@string/descripcionquesos"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="172dp"
                                android:layout_height="87dp"
                                app:srcCompat="@mipmap/pizzaqueso" />

                            <Button
                                android:id="@+id/quesos"
                                android:layout_width="154dp"
                                android:layout_height="74dp"
                                android:onClick="queso"
                                android:backgroundTint="@color/black"
                                android:text="@string/quesos_btn"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>