<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondomenu1"
    tools:context=".Detalles_Menu">

    <ImageView
        android:id="@+id/lgpizza"
        android:layout_width="149dp"
        android:layout_height="135dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        app:srcCompat="@mipmap/pizzalogo2" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="529dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="523dp"
            android:clipToPadding="false"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:clipToPadding="false"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/holo_red_light"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="383dp"
                            android:layout_height="37dp"
                            android:text="@string/estilopizza"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <RadioButton
                                    android:id="@+id/rbmuydelgada"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:text="Muy Delgada"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/rbdelgada"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:text="Delgada"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/rbpanpizza"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:text="Pan Pizza"
                                    tools:ignore="TouchTargetSizeCheck" />
                            </RadioGroup>
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#A93226"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="383dp"
                            android:layout_height="34dp"
                            android:text="@string/cantpizza"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">


                            <EditText
                                android:id="@+id/editTextNumber2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:gravity="center_horizontal"
                                android:inputType="number"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="214dp"
                android:layout_marginBottom="3dp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/holo_red_light"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="380dp"
                            android:layout_height="33dp"
                            android:text="@string/tamanopizza"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <RadioButton
                                    android:id="@+id/rbpersonal"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:text="Personal"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/rbgrande"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:text="Grande"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/rbfamiliar"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:text="Familiar"
                                    tools:ignore="TouchTargetSizeCheck" />
                            </RadioGroup>
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:clipToPadding="false"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#A93226"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="3dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="383dp"
                            android:layout_height="37dp"
                            android:text="Elige tu Mesa"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <RadioButton
                                    android:id="@+id/rbmesa1"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:text="@string/mesa1"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/rbmesa2"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:text="@string/mesa2"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/rbmesa3"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:text="@string/mesa3"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/rbmesa4"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:text="@string/mesa4"
                                    tools:ignore="TouchTargetSizeCheck" />
                            </RadioGroup>
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="Realizar Pedido"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/txtdato"
        android:layout_width="123dp"
        android:layout_height="28dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

</androidx.constraintlayout.widget.ConstraintLayout>